--- a/flaskWeb/templates/500.html
+++ b/flaskWeb/templates/500.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 
-{% block title %}Flasky{% endblock %}
+{% block title %}Flasky - page Not Found{% endblock %}
 
 {% block page_content %}
 <div class="page-header">
-  <h1>Hello,{{name}}!</h1>
+  <h1>Not Found 500</h1>
 </div>
 {% endblock %}
