--- a/flaskWeb/templates/index.html
+++ b/flaskWeb/templates/index.html
@@ -1,1 +1,13 @@
+{% extends "base.html" %}
+
+{% block title %}Index!!{% endblock %}
+
+{% block page_content %}
 <h1>Hello World!</h1>
+<p>
+  The local date and time is {{ moment(current_time).format('LLL') }}.
+</p>
+<p>
+  That was {{ moment(current_time).fromNow(refresh=True) }}
+</p>
+{% endblock %}
