--- a/flaskWeb/trash/templates/base.html
+++ b/flaskWeb/trash/templates/base.html
@@ -1,11 +1,18 @@
 {% extends "bootstrap/base.html" %}
 
-{% block title %}Flasky{% endblock %}
+{% block title %}Flask{% endblock %}
+
 
 {% block head %}
 {{ super() }}
 <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
 <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
+{% endblock %}
+
+
+{% block scripts %}
+{{ super() }}
+{{ moment.include_moment() }}
 {% endblock %}
 
 {% block navbar %}
@@ -30,19 +37,14 @@
 {% endblock %}
 
 {% block content %}
-<div class="container">
+  <div class="container">
     {% for message in get_flashed_messages() %}
-    <div class="alert alert-warning">
+      <div class="alert alert-warning">
         <button type="button" class="close" data-dismiss="alert">&times;</button>
         {{ message }}
-    </div>
+      </div>
     {% endfor %}
 
     {% block page_content %}{% endblock %}
-</div>
-{% endblock %}
-
-{% block scripts %}
-{{ super() }}
-{{ moment.include_moment() }}
+  </div>
 {% endblock %}
