--- a/flaskWeb/templates/404.html
+++ b/flaskWeb/templates/404.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 
-{% block title %}Flasky - page Not Found{% endblock %}
+{% block title %}Flasky - Page Not Found{% endblock %}
 
 {% block page_content %}
 <div class="page-header">
-  <h1>Not Found 1</h1>
+    <h1>Not Found</h1>
 </div>
 {% endblock %}
