--- a/flaskWeb/trash/templates/500.html
+++ b/flaskWeb/trash/templates/500.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 
-{% block title %}Flasky - Internal Server Error{% endblock %}
+{% block title %}Flasky - page Not Found{% endblock %}
 
 {% block page_content %}
 <div class="page-header">
-    <h1>Internal Server Error</h1>
+  <h1>Not Found 500</h1>
 </div>
 {% endblock %}
