--- a/flamingo(P)/app/views/index.ejs
+++ b/flamingo(P)/app/views/index.ejs
@@ -8,5 +8,12 @@
   <body>
     <img src="img/favicon.png" alt="" />
     <h1><%= title %></h1>
+    <% if (userFullname) {%>
+      <h2>Hello <%= userFullname %></h2>
+      <a href="/signout">Sign out</a>
+    <% }else{ %>
+      <a href="/signin">Sign in</a>
+      <a href="/signup">Sign up</a>
+    <% } %>
   </body>
 </html>
