--- a/flamingo(P)/app/views/index.ejs
+++ b/flamingo(P)/app/views/index.ejs
@@ -26,10 +26,19 @@
     <script type="text/javascript" src="/lib/angular-route/angular-route.js"></script>
     <script type="text/javascript" src="lib/angular-resource/angular-resource.js"></script>
 
+    <script type="text/javascript" src="articles/articles.client.module.js"></script>
+    <script type="text/javascript" src="articles/controllers/articles.client.controllers.js"></script>
+    <script type="text/javascript" src="articles/server/articles.client.server.js"></script>
+    <script type="text/javascript" src="articles/config/articles.client.routes.js"></script>
+
     <script type="text/javascript" src="/example/example.client.module.js"></script>
     <script type="text/javascript" src="/example/controllers/example.client.controller.js"></script>
     <script type="text/javascript" src="/example/config/example.client.routes.js"></script>
 
+    <script type="text/javascript" src="users/users.client.module.js"></script>
+    <script type="text/javascript" src="users/services/authentication.client.service.js"></script>
+
+    <!-- Bootstrap AngularJS Application -->
     <script type="text/javascript" src="/application.js"></script>
   </body>
 </html>
