--- a/flamingo(P)/public/example/views/example.client.view.html
+++ b/flamingo(P)/public/example/views/example.client.view.html
@@ -1,4 +1,16 @@
 <section ng-controller="ExampleController">
-  <input type="text" id="text1" ng-model="name">
-  <input type="text" id="text2" ng-model="name">
+  <div data-ng-show="! authentication.user">
+    <a href="/signup">Signup</a>
+    <a href="/signin">Signin</a>
+  </div>
+  <div data-ng-show="authentication.user">
+    <h1>Hello <span data-ng-bind="authentication.user.fullName"></span></h1>
+    <a href="/signout">Signout</a>
+  </div>
+  <ul>
+    <li><a href="/#!/articles">List Articles</a></li>
+    <li><a href="/#!/articles/create">Create Articles</a></li>
+  </ul>
+  <input type="text" id="text1" ng-model="name" placeholder="testInput">
+  <input type="text" id="text2" ng-model="name" placeholder="testInput">
 </section>
