mob codeLab index and article public page

--- a/codeLab(P)/public/css/_header.scss
+++ b/codeLab(P)/public/css/_header.scss
@@ -2,7 +2,8 @@
   width: 100%;
   height: $header-height;
   background-color: #fff;
-  margin-bottom:30px;
+  margin-bottom:44px;
+  position: relative;
   @include clearfix();
 }
 
@@ -19,10 +20,11 @@
   }
 }
 .mune-container{
+  margin: 0;
   width: 18%;
   height: 100%;
   border-right: 1px solid $primary-grey;
-
+  box-sizing: border-box;
   span{
     float: left;
   }
@@ -36,14 +38,19 @@
   }
 }
 .search-container{
+  margin: 0;
+  width: 82%;
   .search-botton{
     padding-left: 10px;
   }
 }
 .banner-container{
-  float: right;
   background-color: #000;
-  width: 29%;
+  width: 30%;
+  height: 100%;
+  position: absolute;
+  right: 0;
+  top: 0;
 }
 @media screen and (min-width:1024px){
   //>1024px;
