--- a/codeLab(P)/app/views/index.ejs
+++ b/codeLab(P)/app/views/index.ejs
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title><%= title %></title>
-    <link rel="shortcut icon" href="img/favicon.png">
+    <!-- <link rel="shortcut icon" href="img/favicon.png"> -->
   </head>
   <body>
-    <img src="img/favicon.png" alt="" />
+    <!-- <img src="img/favicon.png" alt="" /> -->
     <h1><%= title %></h1>
   </body>
 </html>
