--- a/baMENXapp(P)/app/views/index.ejs
+++ b/baMENXapp(P)/app/views/index.ejs
@@ -8,6 +8,6 @@
   <body>
     <!-- <img src="img/favicon.png" alt="" /> -->
     <h1><%= title %></h1>
-    <p><%= session %></p>
+    <p><%= Session =></p>
   </body>
 </html>
