--- a/codeLab(P)/app/views/article.ejs
+++ b/codeLab(P)/app/views/article.ejs
@@ -2,12 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title><%= title %></title>
+    <title><%= count %></title>
     <!-- <link rel="shortcut icon" href="img/favicon.png"> -->
   </head>
   <body>
     <!-- <img src="img/favicon.png" alt="" /> -->
-    <h1><%= title %></h1>
-    <p><%= session %></p>
+    <h1><%= count %></h1>
   </body>
 </html>
