--- a/codeLab(P)/codelab-front-src/src/style/old-style/default.scss
+++ b/codeLab(P)/codelab-front-src/src/style/old-style/default.scss
@@ -5,9 +5,7 @@
 
 // Reset and dependencies
 @import "normalize";
-@import "reboot"; //global fonts,style,bg,archor color reset
 
 
 // Components
-@import "appRoot";
-@import "header";
+@import "rootContainer";
